iframe page for embedding in 3rd party websites #283 * Remove the question about connection type (wired/wifi/cellular) in its entirety. * Change Estimated price per month question to OPTIONAL. * Remove csv Export button from iframe, just need to know the direct link URL. * Make question 3 (regarding price), optional. This will require the additional change of having question 4 come up to fill out in tandem with question 3. * The "i" hover over in question 3 floats up and is getting cut off (readability). Needs to float down, which should prevent the text from being cutoff. * Remove entire statement on results page, "This test helps...". * we need to change the language under the "I don't have internet" track, when they enter their address. The copy should be replaced with "I'd like to register my address as a location that doesn't have internet".

--- a/app/assets/region-stylesheets/region.css.scss
+++ b/app/assets/region-stylesheets/region.css.scss
@@ -268,3 +268,30 @@ $bg1: url(https://upload.wikimedia.org/wikipedia/commons/c/cd/Central_Oregon_lan
 .region .banner-text {
     padding: 0px; 
 }
+
+/* tooltip adjustment */
+.region .glyphicon {
+    display: block;
+}
+
+.region nav.navbar {
+    display: none;
+}
+
+.region #form-container {
+    padding: 40px 30px 0px;
+}
+
+/* make address wider */
+.region .algolia-places {
+    width: 100%;
+}
+
+/* for results page */
+.region .title-container {
+    margin-top: 0px;
+}
+
+.region .tooltip{
+	/* background-color:$color1; */
+}
